# sushi-next

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sushi/: __init__.py  __main__.py  demux.py  regression-tests.py  subs.py  wav.py
tests/: demuxing.py  subtitles.py
