[project]
name = "sushi-sub-next"
version = "0.6.4"
description = "Subtitle Synchronization Tool"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "C1fer" }
]
keywords = ["subtitle", "sync"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing",
]
dependencies = [
    "numpy>=2.3.4,<3",
    "scipy>=1.16.2,<2",
    "opencv-python>=4.8.1.78,<5",
]

[project.urls]
Repository = "https://github.com/C1fer/sushi-next"

[project.scripts]
sushi = "sushi.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sushi"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
